kubernetes/deploy-consumer.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.quarkus.io/build-timestamp: 2023-11-07 - 12:03:16 +0000
  labels:
    app.kubernetes.io/name: kafka-consumer
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
    app.kubernetes.io/managed-by: quarkus
  name: kafka-consumer
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/name: kafka-consumer
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.quarkus.io/build-timestamp: 2023-11-07 - 12:03:16 +0000
  labels:
    app.kubernetes.io/managed-by: quarkus
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
    app.kubernetes.io/name: kafka-consumer
  name: kafka-consumer
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/version: 1.0.0-SNAPSHOT
      app.kubernetes.io/name: kafka-consumer
  template:
    metadata:
      annotations:
        app.quarkus.io/build-timestamp: 2023-11-07 - 12:03:16 +0000
      labels:
        app.kubernetes.io/managed-by: quarkus
        app.kubernetes.io/version: 1.0.0-SNAPSHOT
        app.kubernetes.io/name: kafka-consumer
    spec:
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
          image: quay.io/lordofthejars/kafka-consumer:1.0.0-SNAPSHOT
          imagePullPolicy: Always
          name: kafka-consumer
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
