kubernetes/deploy-producer-partitioner.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.openshift.io/vcs-url: <<unknown>>
    app.quarkus.io/build-timestamp: 2023-11-07 - 15:02:26 +0000
  labels:
    app.kubernetes.io/name: kafka-producer
    app.kubernetes.io/version: producer
    app.kubernetes.io/managed-by: quarkus
    app.openshift.io/runtime: quarkus
  name: kafka-producer
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/name: kafka-producer
    app.kubernetes.io/version: producer
  type: ClusterIP
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    app.openshift.io/vcs-url: <<unknown>>
    app.quarkus.io/build-timestamp: 2023-11-07 - 15:02:26 +0000
  labels:
    app.kubernetes.io/name: kafka-producer
    app.kubernetes.io/version: producer
    app.kubernetes.io/managed-by: quarkus
    app.openshift.io/runtime: quarkus
  name: kafka-producer
spec:
  replicas: 1
  selector:
    app.kubernetes.io/version: producer
    app.kubernetes.io/name: kafka-producer
  template:
    metadata:
      annotations:
        app.openshift.io/vcs-url: <<unknown>>
        app.quarkus.io/build-timestamp: 2023-11-07 - 15:02:26 +0000
      labels:
        app.kubernetes.io/managed-by: quarkus
        app.openshift.io/runtime: quarkus
        app.kubernetes.io/version: producer
        app.kubernetes.io/name: kafka-producer
    spec:
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
          image: quay.io/lordofthejars/kafka-producer:partitioner
          imagePullPolicy: Always
          name: kafka-producer
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
  triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
          - kafka-producer
        from:
          kind: ImageStreamTag
          name: kafka-producer:producer
      type: ImageChange
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    app.openshift.io/vcs-url: <<unknown>>
    app.quarkus.io/build-timestamp: 2023-11-07 - 15:02:26 +0000
  labels:
    app.kubernetes.io/name: kafka-producer
    app.kubernetes.io/version: producer
    app.kubernetes.io/managed-by: quarkus
    app.openshift.io/runtime: quarkus
  name: kafka-producer
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: kafka-producer
